<resources>
    <string name="app_name">Eclipse</string>
    <string name="title_activity_mirror">Mirror</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Reposition Widget</string>
    <string name="second_fragment_label">Edit widget</string>
    <string name="settings">settings</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>

    <!-- Welcome screen -->
    <string name="welcome">Welcome to the companion app of the Eclipse Smart Mirror</string>
    <string name="mirror">Mirror</string>
    <string name="button">Button</string>

    <!-- Mirror/Widgets settings screen -->
    <string name="reposition_fragment">Reposition your widgets</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_homescreen">Homescreen</string>

    <string name="hello_first_fragment">Hello first fragment</string>

    <!-- Mirrorlist -->
    <string name="no_mirrors_connected">No devices connected</string>

    <!-- New mirror -->
    <string name="scanning_network">Scanning network</string>
    <string name="no_mirrors_found">No mirrors found. \nPlease check if mirror is powered on.</string>

    <!-- Mirror Settings -->
    <string name="display_header">Display</string>
    <string name="display_title">Display on timer</string>
    <string name="timer_summary_off">Display always on</string>
    <string name="timer_summary_on">Display is on for set amount of time</string>
    <string name="timer_title">Timer</string>

</resources>