<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/display_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/display_header">

        <SwitchPreferenceCompat
            app:key="display"
            app:title="@string/display_title"
            app:summaryOff="@string/timer_summary_off"
            app:summaryOn="@string/timer_summary_on"/>

        <EditTextPreference
            app:dependency="display"
            app:key="timer"
            app:title="@string/timer_title"
            android:inputType="numberPassword"
            android:digits="0123456789" />

    </PreferenceCategory>

    <PreferenceCategory app:title="help">

        <EditTextPreference
            app:key="signature"
            app:title="Link naar website met instrucitie video"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="Forget mirror"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>