<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".AddMirrorFragment">

    <TextView
        android:id="@+id/found_devices"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="64dp"
        android:text="@string/no_mirrors_found"
        android:textAlignment="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/loadingPanel"
        app:layout_constraintEnd_toEndOf="@+id/loadingPanel"
        app:layout_constraintStart_toStartOf="@+id/loadingPanel"
        app:layout_constraintTop_toTopOf="@+id/loadingPanel"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/scanning_network"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="200dp"
        android:text="@string/scanning_network"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/loadingPanel"
        app:layout_constraintEnd_toEndOf="@+id/loadingPanel"
        app:layout_constraintStart_toStartOf="@+id/loadingPanel"
        app:layout_constraintTop_toTopOf="@+id/loadingPanel"
        app:layout_constraintVertical_bias="0.50" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/loadingPanel"
        app:layout_constraintEnd_toEndOf="@+id/loadingPanel"
        app:layout_constraintStart_toStartOf="@+id/loadingPanel" />

    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="00dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:indeterminate="false" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/mirrorCard"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/mirrorImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/homescreen" />

        <TextView
            android:id="@+id/mirrorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="8dp"
            android:text="Smart Mirror"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="192.168.178.18"
            android:layout_marginStart="8dp"
            android:layout_marginTop="190dp"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:id="@+id/mirrorSettings"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginVertical="220dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="Options"
            android:textColor="@color/orange_dark" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>